# ds2dbx

./: .gitignore  README.md  pyproject.toml
src/ds2dbx/: __init__.py  __main__.py  cli.py  config.py
src/ds2dbx/lakebridge/: __init__.py  bladebridge.py  prompt_manager.py  switch.py
src/ds2dbx/passes/: __init__.py  base.py  pass1_ddl.py  pass2_data.py  pass3_transpile.py  pass4_shell.py  pass5_validate.py
src/ds2dbx/prompts/: __init__.py  datastage_fix_prompt.yml  ddl_prompt.yml  shell_prompt.yml  switch_ddl_prompt.yml  switch_shell_prompt.yml
src/ds2dbx/scanner/: __init__.py  folder.py  pattern.py  shell_classifier.py
src/ds2dbx/templates/: loader_notebook.py.j2  validate_file_ingestion.py.j2  validate_generic.py.j2  validate_multi_join.py.j2  validate_scd2.py.j2
src/ds2dbx/triage/: __init__.py  bugs.yml  engine.py
src/ds2dbx/utils/: delimiter.py  lakebridge_resolver.py  status.py  subprocess_runner.py
src/ds2dbx/verify/: __init__.py  ddl_verify.py  shell_verify.py
src/ds2dbx/workspace/: deploy.py  runner.py  setup.py
